--- a/PSs/src/main/resources/templates/new_student.html
+++ b/PSs/src/main/resources/templates/new_student.html
@@ -80,11 +80,15 @@
 
 		<form action="#" th:action="@{/addStudent}" th:object="${student}"
 			  method="POST">
-			<input type="text" th:field="*{firstName}"
-				   placeholder="Student First Name" >
-
-			<input type="text" th:field="*{lastName}"
-				   placeholder="Student Last Name">
+			<label>
+				<input type="text" th:field="*{firstName}"
+					   placeholder="Student First Name" >
+			</label>
+			<div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">FirstName error </div>
+			<label>
+				<input type="text" th:field="*{lastName}"
+					   placeholder="Student Last Name">
+			</label>
 
 			<input type="text" th:field="*{email}"
 				   placeholder="Student Email">
@@ -94,6 +98,11 @@
 			</select>
 
 			<button type="submit" > Save Student</button>
+
+			<div th:if="${#fields.hasErrors('*')}">
+				<p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
+			</div>
+
 		</form>
 
 
