--- a/PSs/src/main/resources/templates/update_student.html
+++ b/PSs/src/main/resources/templates/update_student.html
@@ -83,19 +83,25 @@
 			  method="POST">
 			<input type="number" th:field="*{id}"
 				   placeholder="Id" >
-			<input type="text" th:field="*{firstName}"
-				   placeholder="Student First Name" >
-
-			<input type="text" th:field="*{lastName}"
-				   placeholder="Student Last Name">
-
+			<label>
+				<input type="text" th:field="*{firstName}"
+					   placeholder="Student First Name">
+			</label>
+			<div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">FirstName error</div>
+			<label>
+				<input type="text" th:field="*{lastName}"
+					   placeholder="Student Last Name">
+			</label>
+			<div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">LastName error</div>
 			<input type="text" th:field="*{email}"
 				   placeholder="Student Email">
-
+			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
 			<select th:field="*{degree}">
 				<option th:each="degree : ${degrees}" th:value="${degree}" th:text="${degree}"></option>
 			</select>
-
+			<select th:field="*{adress}">
+				<option th:each="adress : ${adresses}" th:value="${adress.id}" th:text="${adress.city}"></option>
+			</select>
 			<button type="submit" > Save Student</button>
 		</form>
 
