--- a/PSs/src/main/resources/templates/index.html
+++ b/PSs/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <title>PS</title>
 </head>
-<body>
+
 <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
@@ -68,13 +68,13 @@
         </div>
     </nav>
     <!-- Navbar -->
-
+</body>
     <!-- Background image -->
     <div
             class="p-5 text-center bg-image"
             style="
-          background-image: url('https://ug.edu.pl/sites/ug.edu.pl/files/_nodes/strona/97498/images/ug2.jpg');
-          height: 400px;
+          background-image: url('https://wns.ug.edu.pl/sites/default/files/_nodes/strona-wns/67479/files/wns_studiuj.jpg');
+          height: 500px;
           margin-top: 58px;
         "
     >
@@ -84,81 +84,87 @@
                     <h1 class="mb-3">Student's Portal</h1>
                     <h4 class="mb-3">University of Gdansk</h4>
                     <a class="btn btn-outline-light btn-lg" href="#!" role="button"
-                    >Perfect place</a
+                    >University of Gdansk shares its knowledge.</a
                     >
                 </div>
             </div>
         </div>
     </div>
+    </div>
+
     <!-- Background image -->
 </header>
 
 
 <center>
+
     <div id="portfolio" class="container-fluid text-center bg-grey">
-        <h2>University</h2><br>
-        <h4>How it looks like</h4>
+        <h2>#NEWS</h2>
         <div class="row text-center slideanim">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="https://www.worldisbeautiful.eu/up_files/1622-Uniwersytet-Gdanski.jpg" alt="Paris" width="400" height="300">
-                    <p><strong>UG</strong></p>
-                    <p>Amazing</p>
+                    <img src="https://images.ctfassets.net/9htf9uzhsn4z/1c94be1u8nvK7vVhn1l4FK/8814fe029cb68a61cb57aaba3b50e0bc/lulu-book-linen-black-foils-thumb-16-9.jpg?q=70&fm=webp"  width="400" height="400">
+                    <p><strong>#UGStudent</strong></p>
+                    <p>We are stating new cycle "Lesson on UG"</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="https://www.worldisbeautiful.eu/up_files/1622-Uniwersytet-Gdanski.jpg" alt="New York" width="400" height="300">
-                    <p><strong>UG</strong></p>
-                    <p>Perfect</p>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSYXUbUrWtMDv4hovWCFgzgnxcj67FCDxVwA&usqp=CAU" width="400" height="300">
+                    <p><strong>Basketball</strong></p>
+                    <p>Our team has won the first prize.</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="https://www.worldisbeautiful.eu/up_files/1622-Uniwersytet-Gdanski.jpg" alt="San Francisco" width="400" height="300">
-                    <p><strong>UG</strong></p>
-                    <p>Lovely</p>
+                    <img src="https://media.wired.com/photos/5f592bfb643fbe1f6e6807ec/16:9/w_2400,h_1350,c_limit/business_chess_1200074974.jpg"  width="400" height="300">
+                    <p><strong>Chess</strong></p>
+                    <p>"Playing chess is now cool"~Students from UG</p>
                 </div>
             </div>
         </div><br>
-
-        <h2>What students say</h2>
-        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <h4>"I work at google!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
-                </div>
-                <div class="item">
-                    <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
-                </div>
-                <div class="item">
-                    <h4>"Best Experience!"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
     </div>
 </center>
-<a href="class">Add and Show Classes</a>
-<footer>
-Projekt Zespołowy-Alicja Olejnik i Julia Komorowska
-</footer>
+<div
+        class="p-5 text-center bg-image"
+        style="
+          background-color: WhiteSmoke;
+          height: 350px;
+          margin-top: 58px;
+        "
+>
+<div id="contact" class="container-fluid bg-grey">
+    <h2 class="text-center">CONTACT</h2>
+    <div class="row">
+        <div class="col-sm-5">
+            <p>Contact us and we'll get back to you within 24 hours.</p>
+            <p><span class="glyphicon glyphicon-map-marker"></span> Gdansk,UG</p>
+            <p><span class="glyphicon glyphicon-phone"></span> +48 238 233 231</p>
+            <p><span class="glyphicon glyphicon-envelope"></span> ug@edu.pl</p>
+        </div>
+        <div class="col-sm-7 slideanim">
+            <div class="row">
+                <div class="col-sm-6 form-group">
+                    <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+                </div>
+                <div class="col-sm-6 form-group">
+                    <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+                </div>
+            </div>
+            <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+            <div class="row">
+                <div class="col-sm-12 form-group">
+                    <button class="btn btn-default pull-right" type="submit">Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<center>
+
+
+
 </body>
+</center>
 </html>
